presentation updated